--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-gradio==4.44.1
-anthropic
-python-dotenv
-requests 
+gradio==5.31.0
+anthropic==0.51.0
+python-dotenv==1.1.0
+requests==2.32.3
+lxml==5.4.0 
